@@ -1,21 +1,19 @@
 package edu.wisc.my.messages.controller;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import java.net.URI;
 import java.net.URL;
 import org.hamcrest.core.StringContains;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.context.embedded.LocalServerPort;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
+import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.context.junit4.SpringRunner;
 
-@RunWith(SpringRunner.class)
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 public class MessagesControllerIT {
 
@@ -27,9 +25,9 @@ public class MessagesControllerIT {
   @Autowired
   private TestRestTemplate template;
 
-  @Before
+  @BeforeEach
   public void setUp() throws Exception {
-    this.base = new URL("http://localhost:" + port + "/");
+    this.base = URI.create("http://localhost:" + port + "/").toURL();
   }
 
   @Test
@@ -43,7 +41,6 @@ public class MessagesControllerIT {
   public void nonexistentPathYields404() throws Exception {
     ResponseEntity<String> response =
       template.getForEntity(base.toString() + "someGoofyPath", String.class);
-    assertEquals("Missing path should yield 404 not found response.",
-      404, response.getStatusCodeValue());
+    assertEquals(404, response.getStatusCodeValue(), "Missing path should yield 404 not found response.");
   }
 }
